--- a/index.css
+++ b/index.css
@@ -5,6 +5,8 @@ body {
   background-image: url("img/table.png");
   font-family: "Exo 2", sans-serif;
   height: 100vh;
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 body {
